<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Ui.Activity.ThePrivate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/_10sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/cardview_image_back"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:text="@string/theprivate"
            android:gravity="center"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_image_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_30sdp"
            android:layoutDirection="rtl"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_back"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/about_the_private"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/priavte_num1"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/detailes_private_num1"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/priavte_num2"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/detailes_private_num2"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/priavte_num3"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/detailes_private_num3"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/priavte_num4"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/detailes_private_num4"
                android:gravity="right"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:textSize="@dimen/_14ssp"
                android:drawableRight="@drawable/ic_email"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:textColorLink="#0277BD"
                android:text="@string/menu_email"
                android:gravity="right"
                android:autoLink="email"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_20sdp"
                >
                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:id="@+id/logo"
                    android:src="@drawable/logoo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/boutrosmbcinkmmedium"
                    android:textColor="@color/black"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/boutrosmbcinkmmedium"
                    android:textColor="@color/black"
                    android:text="@string/version"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
