<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".Ui.Activity.AboutApp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/_10sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/cardview_image_back"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:text="@string/about"
            android:gravity="center"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_image_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_30sdp"
            android:layoutDirection="rtl"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_back"
                />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:text="@string/about_app"
            android:gravity="right"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/task_about_app"
            android:gravity="right"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:text="@string/detailes_task_about_app"
            android:gravity="right"
            />
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/version_about_app"
            android:gravity="right"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:text="@string/detailes_version_about_app"
            android:gravity="right"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/callus"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/img_facebook"
                android:src="@drawable/facebook"/>
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:id="@+id/img_whatspp"
                android:src="@drawable/whatsapp"/>
            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/img_email"
                android:src="@drawable/gmail"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/company"
            android:gravity="right"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/boutrosmbcinkmmedium"
            android:textColor="@color/black"
            android:text="@string/companyname"
            android:gravity="right"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="right"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/callus"
                android:gravity="right"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:gravity="right"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:autoLink="phone"
                    android:fontFamily="@font/boutrosmbcinkmmedium"
                    android:textColor="@color/black"
                    android:textColorLink="@color/black"
                    android:text="0992088105"
                    />
                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:autoLink="phone"
                    android:textColorLink="@color/black"
                    android:fontFamily="@font/boutrosmbcinkmmedium"
                    android:textColor="@color/black"
                    android:text="0119053992"
                    android:gravity="right"
                    />
            </LinearLayout>
         </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_60sdp"
                android:id="@+id/logo"
                android:src="@drawable/logoo"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:gravity="center"
                />
            <View
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/boutrosmbcinkmmedium"
                android:textColor="@color/black"
                android:text="@string/version"
                android:textStyle="bold"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>